# partagpu

./: .gitignore  .gitlab-ci.yml  README.md  SECURITY.md  TODO.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: pypi.yml  release.yml
examples/: decouverte_gpu.ipynb
python/: README.md  pyproject.toml
python/src/partagpu/: __init__.py  discover.py  distributed.py
scripts/: install-helper.sh  uninstall-helper.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helper/: Cargo.toml
src-tauri/helper/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: com.partagpu.policy
src-tauri/scripts/: postinstall.sh
src-tauri/src/: api.rs  auth.rs  discovery.rs  http_api.rs  lib.rs  main.rs  resource.rs  sandbox.rs  security_log.rs  sharing.rs  task_runner.rs  user_manager.rs
src/components/: PeerTable.tsx  ResourceGauge.tsx  ResourceSliders.tsx  RoomSetup.tsx  SecurityLog.tsx  SharingToggle.tsx  TaskList.tsx  UsageBreakdown.tsx
src/lib/: api.ts
src/pages/: Guide.tsx  MySharing.tsx  MyUsage.tsx
