[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "partagpu"
version = "1.0.0"
description = "Client Python pour PartaGPU — entraînement distribué multi-GPU sur réseau local"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "César Lizurey", email = "cesar@lizurey.fr" },
]
keywords = ["gpu", "distributed", "pytorch", "training", "local-network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]

[project.urls]
Homepage = "https://github.com/cesar-lizurey/partagpu"
Repository = "https://github.com/cesar-lizurey/partagpu"

[tool.setuptools.packages.find]
where = ["src"]
