[workspace]
members = [".", "helper"]

[package]
name = "partagpu"
version = "0.1.0"
description = "Partage de ressources de calcul sur réseau local"
authors = ["PartaGPU"]
edition = "2021"

[lib]
name = "partagpu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
sysinfo = "0.35"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
totp-rs = { version = "5", features = ["gen_secret"] }
base32 = "0.5"
data-encoding = "2"
hmac = "0.12"
sha1 = "0.10"
log = "0.4"
env_logger = "0.11"
