[package]
name = "partagpu-helper"
version = "1.0.0"
description = "PartaGPU privilege helper — runs via pkexec as root"
authors = ["César Lizurey"]
homepage = "https://cesar.lizurey.fr"
repository = "https://github.com/cesar-lizurey/partagpu"
license = "MIT"
edition = "2021"

[[bin]]
name = "partagpu-helper"
path = "src/main.rs"

[dependencies]
